# axum-deno-test

./: Cargo.toml  README.md  deno.json  flake.nix  justfile  main.ts  run.ts  tailwind.config.js
.cargo/: config.toml
.github/workflows/: deno-ci.yml  depoly.yml
articles/drafts/: post-01.md
articles/published/: age-nvim.md  hello-world.md  how-to-set-up-godaddy-domain-with-github-pages.md  roxide.md  setting-up-newsboat-the-nix-way.md
src/: lib.rs  main.rs  post.rs
src/components/: portfolio_page.rs
static/: style.css
templates/: index.html  post.html
