[package]
name = "website"
version = "0.1.0"
authors = ["Abhinandh S <abhinandhsuby@proton.me>"]
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
askama = "0.15"
axum = { version = "0.8", default-features = false, features = ["macros", "form", "json"] }
axum-js-fetch = { git = "https://github.com/seanaye/axum-js-fetch" }
axum-extra = { version = "0.12", features = ["typed-header"] }
jsonwebtoken = { version = "10.3.0", default-features = false, features = ["use_pem", "rust_crypto"] }
js-sys = "0.3"
once_cell = "1.18.0"
serde_json = "1"
web-sys = { version = "0.3.69", features = ["Request", "Response", "console"] }
wasm-bindgen-futures = "0.4.42"
wasm-bindgen = "0.2.92"
serde = { version = "1.0", features = ["derive"]}
getrandom = { version = "0.2", features = ["js"] }
console_error_panic_hook = "0.1.7"

[profile.release]
opt-level = "z"
lto = true
